k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reach
  labels:
    service: reach
spec:
  selector:
    app: reach
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
